<resources>
    <string name="app_name">VoyagerX</string>

    <string name="example_mission_name">SXM-7</string>
    <string name="example_launch_overview_year">2020</string>
    <string name="example_launch_overview_site_name">Cape Canaveral Air Force Station Space Launch Complex 40</string>
    <string name="field_separator">•</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="title_logout">Logout</string>
    <string name="back_button">Back</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="login_button">Launch!</string>
    <string name="intended_login_view">View</string>
    <string name="logout_message">You have logged out</string>
    <string name="confirm_dialog">OK</string>

    <string name="filter_launches_content_description">Filter launches</string>
    <string name="landing_page_network_try_later">Please try again later.</string>
    <string name="landing_page_connection_failed">Connection Failed.</string>
    <string name="avatarInitial">U</string>
    <string name="your_favorite_launches_label">Your Favorite Launches</string>
    <string name="user_bio">A spaceman wanting to go into space, man!</string>
    <string name="users_profile_heading">%1$s\'s Profile</string>
    <string name="users_profile_heading_last_char_s">%1$s\' Profile</string>
    <string name="edit_profile_button_content_description">Edit profile button</string>
    <string name="first_letter_of_user_name_content_description">First letter of user\'s name</string>

    <string name="edit_profile">Edit profile</string>
    <string name="cancel_edit_profile_x">X</string>
    <string name="name_profile_label">NAME</string>
    <string name="password_profile_label">PASSWORD</string>
    <string name="location_profile_label">LOCATION</string>
    <string name="bio_profile_label">BIO</string>
    <string name="save_button_text">Save</string>
    <string name="enter_location_here_hint">Enter location here</string>
    <string name="password_symbols_profile">●●●●●●●●</string>
    <string name="enter_bio_here">Enter bio here</string>
    <string name="enter_name_here">Enter name here</string>
    <string name="user_temp_name">User</string>

    <string name="launch_image_description">Image of launch</string>
    <string name="detailSubheader">DETAILS</string>
    <string name="sample_launch_date">2014-01-08</string>
    <string name="sample_launch_details">Second GTO launch for Falcon 9. The USAF evaluated launch data from this flight as part of a separate certification program for SpaceX to qualify to fly U.S. military payloads and found that the Thaicom 6 launch had \'unacceptable fuel reserves at engine cutoff of the stage 2 second burnoff\'</string>
    <string name="location_icon_description">location icon</string>
    <string name="sample_mission_name">Thaicom 6</string>
    <string name="sample_site_name_long">Cape Canaveral Air Force Station</string>
    <string name="LinksHeader">LINKS</string>
    <string name="video_link_text">Watch the launch video</string>
    <string name="article_link_text">Read the latest article</string>
    <string name="external_link_icon_description">External link button</string>

    <string name="stars_background_content_desc">Stars background</string>
    <string name="rockets_background_content_desc">Rockets background</string>
    <string name="settings_fragment_name">Settings</string>
    <string name="font_size_img_content_desc">Font size image</string>
    <string name="large_menu_label">Large</string>
    <string name="rocket_notification_content_desc">Rocket notification</string>
    <string name="notify_me_of_new_launches">Notify me of new launches</string>


    <string name="user_preference">user_preference</string>
    <string name="curr_user">current_user</string>

    <string name="no_bio_std_message">No bio needed in space!</string>

    <!-- Errors -->
    <string name="email_not_found_error">Email not found</string>
    <string name="incorrect_password_error">Incorrect password</string>
    <string name="email_already_registered_error">Email already registered</string>

    <string name="no_favorite_launches_case_msg">Failure to launch! No launches have been saved!</string>
    <string name="no_favorite_launches_content_desc">You have no favorite launches!</string>

    <string name="no_mission_msg">No mission name available</string>
    <string name="no_location_msg">No location available</string>
    <string name="no_date_msg">No date available</string>
    <string name="no_details_msg">No details available</string>
    <string name="invalid_email_error">Invalid email</string>
    <string name="invalid_password_error">Invalid password - Must be at least 6 characters</string>
    <string name="invalid_confirm_password_error">Passwords must match</string>
    <string name="menu_site">Site</string>
    <string name="filter_site_submenu">Launch Sites</string>
    <string name="filter_article_link">Has Articles</string>
    <string name="filter_image_link">Has Images</string>
    <string name="filter_video_link">Has Video</string>

    <string name="cancel">cancel</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="need_account_msg">You must be signed in to favorite a launch.</string>
    <string name="account_needed_title">Account Needed</string>
    <string name="log_in_sign_up">Log in/Sign up</string>

    <!-- Preference Titles -->
    <string name="appearance_settings_label">Appearance</string>
    <string name="alerts_settings_label">Alerts</string>


    <!-- Sync Preferences -->
    <string name="starry_background_option">Starry user profile background</string>
    <string name="font_size">Font size</string>
    <string name="notify_user_of_launches">Notify me of new launches</string>
    <string name="notified_of_launches">You will be notified of future launches!</string>
    <string name="not_notified_of_launches">You will not be notified of future launches!</string>
    <string name="favorite_error">There was an error.</string>
    <string name="favorite_launch_msg">Favorited \"%1$s\" launch.</string>
    <string name="unfavorite_launch_msg">Unfavorited \"%1$s\" launch.</string>


    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec blandit luctus leo, vel lobortis nisi. Cras luctus ornare mauris imperdiet pellentesque. Morbi purus odio, lobortis non eros et, consectetur aliquam ipsum. Integer et sapien nisl. Duis nunc dui, tempus vel elit a, malesuada imperdiet leo. Curabitur in auctor tortor, ut pretium nulla. Duis a ultricies eros. Curabitur dictum, augue sed suscipit lobortis, nunc tellus lobortis leo, eget consectetur lectus nisi ac odio. Quisque elementum nunc nec nisi bibendum, id sodales tellus egestas. Integer finibus eget magna scelerisque varius. Quisque quis tincidunt risus. Nunc quis erat tempus, sollicitudin quam ac, vehicula quam. Ut mattis elit sit amet quam scelerisque volutpat. Duis a convallis turpis, ut hendrerit risus. Morbi at mollis massa.
Donec efficitur, magna vel pretium fringilla, nisl felis tristique sapien, ut facilisis ipsum massa quis enim. Morbi condimentum id ipsum vel maximus. Aliquam erat volutpat. Quisque ac dignissim magna. Vivamus luctus ligula eget purus luctus, eget facilisis ipsum aliquam. Aliquam dui lectus, ornare tristique lectus sed, congue mollis magna. Sed at ex nibh. Phasellus finibus lacinia orci ut aliquam. Nunc ornare finibus erat, vitae ornare odio ultrices vitae. Etiam eget risus sit amet augue luctus pharetra. Vestibulum venenatis, quam vel ullamcorper tristique, est mi vehicula tellus, nec rhoncus ipsum neque condimentum sapien. Nulla condimentum iaculis ipsum at tincidunt. Sed non viverra mi. Aliquam auctor ac arcu vel pulvinar. Pellentesque auctor massa tempus ornare fringilla.</string>
</resources>

