<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/appearance_settings_label">

        <SwitchPreferenceCompat
            app:key="background"
            app:title="@string/starry_background_option" />

        <ListPreference
            app:defaultValue="Large"
            app:entries="@array/font_sizes"
            app:entryValues="@array/font_sizes"
            app:key="font_sizes"
            app:title="@string/font_size"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/alerts_settings_label">
        <SwitchPreferenceCompat
            app:key="alerts"
            app:title="@string/notify_user_of_launches" />

    </PreferenceCategory>

</PreferenceScreen>