<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stars_background"
    tools:context=".ui.fragments.editprofile.EditProfileFragment">


    <TextView
        android:id="@+id/tvEditProfileLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />


    <TextView
        android:id="@+id/tvCancelChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="197dp"
        android:text="@string/cancel_edit_profile_x"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/material_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="176dp"
        android:text="@string/save_button_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/material_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvEditProfileLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_container_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEditProfileLabel"
        card_view:cardElevation="0dp">


        <ImageView
            android:id="@+id/ivAvatarBackground"
            android:layout_width="135sp"
            android:layout_height="135sp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/first_letter_of_user_name_content_description"
            android:src="@drawable/avatarcircle" />

        <TextView
            android:id="@+id/tvUserInitial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:text="@string/avatarInitial"
            android:textSize="80sp" />


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/material_divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="18dp"
        app:dividerColor="@color/white"
        app:dividerInsetEnd="16dp"
        app:dividerInsetStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/card_container_avatar"
        tools:layout_editor_absoluteX="0dp" />


    <EditText
        android:id="@+id/editNameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/enter_name_here"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/user_temp_name"
        android:textColor="@color/purple_200"
        android:textColorHint="@color/hint_color"
        app:layout_constraintStart_toStartOf="@+id/tvBioLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvNameLabel" />

    <TextView
        android:id="@+id/tvLocationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_profile_label"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/editLocationField"
        app:layout_constraintTop_toBottomOf="@+id/editBio" />

    <EditText
        android:id="@+id/editBio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/enter_bio_here"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/user_bio"
        android:textColor="@color/purple_200"
        android:textColorHint="@color/hint_color"
        app:layout_constraintStart_toStartOf="@+id/tvLocationLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvBioLabel" />

    <TextView
        android:id="@+id/tvBioLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bio_profile_label"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/editBio"
        app:layout_constraintTop_toBottomOf="@+id/editNameField" />

    <EditText
        android:id="@+id/editLocationField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:hint="@string/enter_location_here_hint"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/purple_200"
        android:textColorHint="@color/hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLocationLabel" />

    <TextView
        android:id="@+id/tvNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/name_profile_label"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/editNameField"
        app:layout_constraintTop_toBottomOf="@+id/material_divider" />


</androidx.constraintlayout.widget.ConstraintLayout>