<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/ivLaunchPictures"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/launch_image_description"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_md"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/guideline">

        <TextView
            android:id="@+id/tvMissionName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_lg"
            android:text="@string/sample_mission_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />


        <TextView
            android:id="@+id/tvSiteName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_pin_drop_24"
            android:drawablePadding="@dimen/margin_sm"
            android:gravity="center_vertical"
            android:paddingVertical="@dimen/margin_sm"
            android:text="@string/sample_site_name_long"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/tvLaunchDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_sm"
            android:drawableStart="@drawable/ic_baseline_calendar_today_24"
            android:drawablePadding="@dimen/margin_sm"
            android:gravity="center_vertical"
            android:text="@string/sample_launch_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_md"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDetailHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_sm"
                android:text="@string/detailSubheader"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/tvDetailParagraph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_launch_details"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </LinearLayout>


        <TextView
            android:id="@+id/tvLinksHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_sm"
            android:text="@string/LinksHeader"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/tvVideoLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_baseline_link_24"
            android:drawablePadding="@dimen/margin_sm"
            android:text="@string/video_link_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/tvArticleLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_baseline_link_24"
            android:drawablePadding="@dimen/margin_sm"
            android:text="@string/article_link_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>