<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stars_background"
    tools:context=".ui.fragments.settings.SettingsFragment">


    <TextView
        android:id="@+id/tvSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/settings_fragment_name"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <TextView
        android:id="@+id/tvAppearanceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/appearance_settings_label"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSettings" />

    <ImageView
        android:id="@+id/starry_appearance_option"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/starry_appearance_setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppearanceLabel"
        android:contentDescription="@string/stars_background_content_desc" />

    <ImageView
        android:id="@+id/rockets_appearance_option"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="36dp"
        android:src="@drawable/rockets_appearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppearanceLabel"
        android:contentDescription="@string/rockets_background_content_desc" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchAppearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toStartOf="@+id/rockets_appearance_option"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toEndOf="@+id/starry_appearance_option"
        app:layout_constraintTop_toBottomOf="@+id/tvAppearanceLabel"
        app:thumbTint="@drawable/switch_settings" />

    <ImageView
        android:id="@+id/imgTextSize"
        android:layout_width="90dp"
        android:layout_height="98dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/starry_appearance_option"
        android:contentDescription="@string/font_size_img_content_desc" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/menuTextSize"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.831"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgTextSize"
        app:layout_constraintTop_toBottomOf="@+id/rockets_appearance_option">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="none"
            android:text="@string/large_menu_label"
            android:textStyle="bold"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/tvAlertsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/alerts_settings_label"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgTextSize" />

    <ImageView
        android:id="@+id/imgRocketAlert"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/rocket_launch_alert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAlertsLabel"
        android:contentDescription="@string/rocket_notification_content_desc" />

    <TextView
        android:id="@+id/tvNotifyMe"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/notify_me_of_new_launches"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.232"
        app:layout_constraintStart_toEndOf="@+id/imgRocketAlert"
        app:layout_constraintTop_toTopOf="@+id/imgRocketAlert" />


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchNotify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvNotifyMe"
        app:layout_constraintTop_toBottomOf="@+id/menuTextSize"
        app:thumbTint="@drawable/switch_settings" />


</androidx.constraintlayout.widget.ConstraintLayout>