<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/launch_overview_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_small">

    <androidx.cardview.widget.CardView
        android:id="@+id/launch_overview_card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        app:cardBackgroundColor="#AC8F8F"
        app:cardCornerRadius="@dimen/margin_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/launch_overview_card_constraint_layout"
            android:layout_width="400dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/launch_overview_card_mission_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/example_mission_name"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/launch_overview_card_separator_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="•"
                app:layout_constraintEnd_toStartOf="@+id/launch_overview_card_year"
                app:layout_constraintStart_toEndOf="@+id/launch_overview_card_mission_name" />

            <TextView
                android:id="@+id/launch_overview_card_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/example_launch_overview_year"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="0dp" />

            <TextView
                android:id="@+id/launch_overview_card_site_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/example_launch_overview_site_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/launch_overview_card_mission_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>